# nvrs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README  README.md  cliff.toml  n_keyfile.toml  nvrs.tape  nvrs.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cliff.yml  rust.yml
benches/: nvrs_bench.rs
man/: nvrs.1
src/: cli.rs  config.rs  error.rs  keyfile.rs  lib.rs  main.rs  verfiles.rs
src/api/: aur.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  regex.rs
