[package]
name = "nvrs"
version = "0.1.3"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
license = "MIT"
description = "🚦 fast new version checker for software releases 🦀"
repository = "https://github.com/adamperkowski/nvrs"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "rustfmt.toml",
    "man/nvrs.1"
]

[features]
default = ["aur", "github", "gitlab"]
aur = ["reqwest"]
github = ["reqwest"]
gitlab = ["reqwest"]

[dependencies]
clap = { version = "4.5.21", features = ["derive", "color", "error-context", "help", "std", "usage"], default-features = false }
colored = "2.1.0"
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["__tls", "charset", "default-tls", "h2", "http2", "json"], default-features = false, optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
toml = { version = "0.8.19", features = ["parse", "display"], default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
